tests/pact/bad/bad-yield-with-rollback.repl
(begin-tx)

(define-keyset 'k (sig-keyset))

(module yieldtest 'k

  "Cross-chain yield with rollback fails typecheck"

  (defpact cross-chain (name)
    (step
     (let*
         ((nameA (+ name "->A"))
          (r:object{schema-a} { "a-result": nameA }))

       (yield r "1")
       nameA))

    (step
     (resume { "a-result" := ar }
             (+ ar "->B")))
    )
)

(commit-tx)

(typecheck 'yieldtest)
